--- a/animated-validator-swift/Base.lproj/Main.storyboard
+++ b/animated-validator-swift/Base.lproj/Main.storyboard
@@ -1,78 +1,113 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kv2-HF-99y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ecQ-MV-S0N">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Validator View Controller-->
-        <scene sceneID="lSL-ng-qbv">
+        <scene sceneID="fxB-yy-ojW">
             <objects>
-                <viewController id="kv2-HF-99y" customClass="ValidatorViewController" customModule="animated_validator_swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ecQ-MV-S0N" customClass="ValidatorViewController" customModule="animated_validator_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="7cV-Z6-OOB"/>
-                        <viewControllerLayoutGuide type="bottom" id="PWC-RP-XaI"/>
+                        <viewControllerLayoutGuide type="top" id="CvT-dt-zkU"/>
+                        <viewControllerLayoutGuide type="bottom" id="lLl-mp-b9a"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ECW-46-Mnp">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="view" contentMode="scaleToFill" id="zbB-f3-2Tu">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="PvE-ek-e2r">
-                                <rect key="frame" x="20" y="43" width="280" height="30"/>
-                                <accessibility key="accessibilityConfiguration" label=""/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YfI-CE-YJy">
+                                <rect key="frame" x="30" y="35" width="540" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="joj-kj-W3E"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm email" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CXZ-3U-1uX">
-                                <rect key="frame" x="20" y="81" width="280" height="30"/>
-                                <accessibility key="accessibilityConfiguration" label=""/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aC6-8m-vL4">
+                                <rect key="frame" x="30" y="73" width="540" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="phone" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dev-Uv-WRr">
-                                <rect key="frame" x="20" y="119" width="280" height="30"/>
-                                <accessibility key="accessibilityConfiguration" label=""/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tEJ-pc-xDi">
+                                <rect key="frame" x="30" y="111" width="540" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CRI-ge-lLP">
-                                <rect key="frame" x="20" y="233" width="280" height="30"/>
-                                <accessibility key="accessibilityConfiguration" label="">
-                                    <accessibilityTraits key="traits" button="YES"/>
-                                    <bool key="isElement" value="YES"/>
-                                </accessibility>
-                                <state key="normal" title="Submit">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KcG-7x-K13">
+                                <rect key="frame" x="30" y="149" width="540" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V7B-3x-PEh">
+                                <rect key="frame" x="30" y="187" width="540" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JIu-8E-4Lm">
+                                <rect key="frame" x="276.5" y="535" width="47" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="0Cq-T3-JbN"/>
+                                </constraints>
+                                <state key="normal" title="submit"/>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ALg-ia-EU8">
-                                <rect key="frame" x="20" y="157" width="280" height="30"/>
-                                <accessibility key="accessibilityConfiguration" label=""/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="OrA-aG-vkc">
-                                <rect key="frame" x="20" y="195" width="280" height="30"/>
-                                <accessibility key="accessibilityConfiguration" label=""/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                            </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aC6-8m-vL4" firstAttribute="height" secondItem="YfI-CE-YJy" secondAttribute="height" id="16F-we-bSj"/>
+                            <constraint firstItem="lLl-mp-b9a" firstAttribute="top" secondItem="JIu-8E-4Lm" secondAttribute="bottom" constant="20" id="1XZ-4M-p0c"/>
+                            <constraint firstItem="JIu-8E-4Lm" firstAttribute="centerY" secondItem="zbB-f3-2Tu" secondAttribute="centerY" id="4eY-cc-R8z"/>
+                            <constraint firstItem="JIu-8E-4Lm" firstAttribute="centerY" secondItem="zbB-f3-2Tu" secondAttribute="centerY" constant="250" id="6kG-ZA-6cW"/>
+                            <constraint firstItem="JIu-8E-4Lm" firstAttribute="bottomMargin" secondItem="lLl-mp-b9a" secondAttribute="top" id="DZg-Bf-IOu"/>
+                            <constraint firstItem="JIu-8E-4Lm" firstAttribute="centerX" secondItem="zbB-f3-2Tu" secondAttribute="centerX" id="EU8-gS-F95"/>
+                            <constraint firstItem="aC6-8m-vL4" firstAttribute="top" secondItem="YfI-CE-YJy" secondAttribute="bottom" constant="8" id="Exo-Fr-6dA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YfI-CE-YJy" secondAttribute="trailing" constant="10" id="FHB-qq-082"/>
+                            <constraint firstItem="tEJ-pc-xDi" firstAttribute="top" secondItem="aC6-8m-vL4" secondAttribute="bottom" constant="8" id="Ler-Ck-e57"/>
+                            <constraint firstItem="tEJ-pc-xDi" firstAttribute="height" secondItem="aC6-8m-vL4" secondAttribute="height" id="QG0-n3-OaU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tEJ-pc-xDi" secondAttribute="trailing" constant="10" id="QtY-xw-inq"/>
+                            <constraint firstItem="YfI-CE-YJy" firstAttribute="top" secondItem="CvT-dt-zkU" secondAttribute="bottom" constant="15" id="UOa-YH-3KJ"/>
+                            <constraint firstItem="V7B-3x-PEh" firstAttribute="top" secondItem="KcG-7x-K13" secondAttribute="bottom" constant="8" id="Wm2-zt-SJr"/>
+                            <constraint firstItem="JIu-8E-4Lm" firstAttribute="leading" secondItem="zbB-f3-2Tu" secondAttribute="leadingMargin" constant="256" id="YoE-za-u8F"/>
+                            <constraint firstItem="V7B-3x-PEh" firstAttribute="height" secondItem="KcG-7x-K13" secondAttribute="height" id="aUU-rb-KMO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="V7B-3x-PEh" secondAttribute="trailing" constant="10" id="gLZ-sr-Dvv"/>
+                            <constraint firstItem="JIu-8E-4Lm" firstAttribute="centerX" secondItem="zbB-f3-2Tu" secondAttribute="centerX" id="hCe-HW-hFb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KcG-7x-K13" secondAttribute="trailing" constant="10" id="kxm-wG-FFe"/>
+                            <constraint firstItem="KcG-7x-K13" firstAttribute="top" secondItem="tEJ-pc-xDi" secondAttribute="bottom" constant="8" id="lhk-xy-MNx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aC6-8m-vL4" secondAttribute="trailing" constant="10" id="m1l-8H-8pn"/>
+                            <constraint firstItem="V7B-3x-PEh" firstAttribute="leading" secondItem="zbB-f3-2Tu" secondAttribute="leadingMargin" constant="10" id="o7k-xm-7md"/>
+                            <constraint firstItem="KcG-7x-K13" firstAttribute="leading" secondItem="zbB-f3-2Tu" secondAttribute="leadingMargin" constant="10" id="ubz-Ir-uGr"/>
+                            <constraint firstItem="KcG-7x-K13" firstAttribute="height" secondItem="tEJ-pc-xDi" secondAttribute="height" id="vHg-to-6qt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JIu-8E-4Lm" secondAttribute="trailing" constant="256" id="xb2-y1-NJS"/>
+                            <constraint firstItem="YfI-CE-YJy" firstAttribute="leading" secondItem="zbB-f3-2Tu" secondAttribute="leadingMargin" constant="10" id="yUD-ho-VfF"/>
+                            <constraint firstItem="aC6-8m-vL4" firstAttribute="leading" secondItem="zbB-f3-2Tu" secondAttribute="leadingMargin" constant="10" id="ybX-ly-BhG"/>
+                            <constraint firstItem="tEJ-pc-xDi" firstAttribute="leading" secondItem="zbB-f3-2Tu" secondAttribute="leadingMargin" constant="10" id="zIZ-6Z-dpK"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="1XZ-4M-p0c"/>
+                                <exclude reference="4eY-cc-R8z"/>
+                                <exclude reference="DZg-Bf-IOu"/>
+                                <exclude reference="YoE-za-u8F"/>
+                                <exclude reference="hCe-HW-hFb"/>
+                                <exclude reference="xb2-y1-NJS"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="emailConfirmationTextField" destination="CXZ-3U-1uX" id="STW-47-nSY"/>
-                        <outlet property="emailTextField" destination="PvE-ek-e2r" id="aRI-jR-cy1"/>
-                        <outlet property="passwordConfirmTextField" destination="OrA-aG-vkc" id="gIK-5e-8MH"/>
-                        <outlet property="passwordTextField" destination="ALg-ia-EU8" id="Iqf-rw-hRR"/>
-                        <outlet property="phoneTextField" destination="dev-Uv-WRr" id="pJJ-c5-FVV"/>
-                        <outlet property="submitButton" destination="CRI-ge-lLP" id="f0d-t5-5K9"/>
+                        <outlet property="emailConfirmationTextField" destination="aC6-8m-vL4" id="OmL-s6-qeF"/>
+                        <outlet property="emailTextField" destination="YfI-CE-YJy" id="Ook-rq-6oI"/>
+                        <outlet property="passwordConfirmTextField" destination="V7B-3x-PEh" id="BI3-43-lie"/>
+                        <outlet property="passwordTextField" destination="KcG-7x-K13" id="npk-nE-wM1"/>
+                        <outlet property="phoneTextField" destination="tEJ-pc-xDi" id="sHX-8P-NzR"/>
+                        <outlet property="submitButton" destination="JIu-8E-4Lm" id="XFa-Fq-CX4"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="l9C-nw-vXh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gcf-lb-B9Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="346" y="250"/>
+            <point key="canvasLocation" x="807" y="341"/>
         </scene>
     </scenes>
 </document>
